// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`createUnitResolver 1`] = `
Object {
  "address": Object {
    "address": "Ág u. 1.",
    "city": "Budapest",
    "country": "Magyarország",
    "location": Object {
      "lat": 47,
      "lng": 19,
    },
    "postalCode": "1021",
    "title": "HQ",
  },
  "chainId": "test_chain_1_id",
  "createdAt": Any<String>,
  "description": Object {
    "en": "Test unit #test_unit_1_id description",
    "hu": "Teszt unit #test_unit_1_id leírás",
  },
  "groupId": "test_group_1_id",
  "id": "rkeeper-unit",
  "isAcceptingOrders": true,
  "isActive": true,
  "lanes": Array [
    Object {
      "color": "#e72222",
      "id": "lane_01",
      "name": "bár",
    },
    Object {
      "color": "#e123ef",
      "id": "lane_02",
      "name": "konyha",
    },
  ],
  "name": "Késdobáló S",
  "open": Object {
    "from": "1970-01-01",
    "to": "1970-01-01",
  },
  "paymentModes": Array [
    Object {
      "method": "cash",
      "type": "cash",
    },
    Object {
      "method": "card",
      "type": "card",
    },
    Object {
      "method": "inapp",
      "type": "stripe",
    },
  ],
  "pos": Object {
    "rkeeper": Object {
      "anyuppPassword": "ANYUPP_PASSWORD HASHED",
      "anyuppUsername": "ANYUPP_USERNAME",
      "endpointUri": "ENDPOINT_URI",
      "restaurantId": "RESTAURANT_ID",
      "rkeeperPassword": "RKEEPER_PASSWORD HASHED",
      "rkeeperUsername": "RKEEPER_USERNAME",
    },
    "type": "rkeeper",
  },
  "supportedOrderModes": Array [
    "pickup",
    "instant",
  ],
  "supportedServingModes": Array [
    "inPlace",
    "takeAway",
  ],
  "updatedAt": Any<String>,
}
`;

exports[`hashPasswords: VALID PASSWORDS 1`] = `
Object {
  "address": Object {
    "address": "Ág u. 1.",
    "city": "Budapest",
    "country": "Magyarország",
    "location": Object {
      "lat": 47,
      "lng": 19,
    },
    "postalCode": "1021",
    "title": "HQ",
  },
  "chainId": "test_chain_1_id",
  "description": Object {
    "en": "Test unit #test_unit_1_id description",
    "hu": "Teszt unit #test_unit_1_id leírás",
  },
  "groupId": "test_group_1_id",
  "id": "rkeeper-unit",
  "isAcceptingOrders": true,
  "isActive": true,
  "lanes": Array [
    Object {
      "color": "#e72222",
      "id": "lane_01",
      "name": "bár",
    },
    Object {
      "color": "#e123ef",
      "id": "lane_02",
      "name": "konyha",
    },
  ],
  "name": "Késdobáló S",
  "open": Object {
    "from": "1970-01-01",
    "to": "1970-01-01",
  },
  "paymentModes": Array [
    Object {
      "method": "cash",
      "type": "cash",
    },
    Object {
      "method": "card",
      "type": "card",
    },
    Object {
      "method": "inapp",
      "type": "stripe",
    },
  ],
  "pos": Object {
    "rkeeper": Object {
      "anyuppPassword": "ANYUPP_PASSWORD HASHED",
      "anyuppUsername": "ANYUPP_USERNAME",
      "endpointUri": "ENDPOINT_URI",
      "restaurantId": "RESTAURANT_ID",
      "rkeeperPassword": "RKEEPER_PASSWORD HASHED",
      "rkeeperUsername": "RKEEPER_USERNAME",
    },
    "type": "rkeeper",
  },
  "supportedOrderModes": Array [
    "pickup",
    "instant",
  ],
  "supportedServingModes": Array [
    "inPlace",
    "takeAway",
  ],
}
`;
